Fix link spacing

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ section {
     display: flex;
     gap: 2rem;
     margin: 1rem;
-    padding: 1rem;
+    padding: 1rem 1rem 0 1rem;
     max-width: 150ch;
 }
 
@@ -122,7 +122,7 @@ footer {
         display: block;
     }
 
-    li {
+    .page-nav li {
         margin-bottom: 0.35rem;
     }
 
